styles/style.css
/* ... */
.login-text p {
	font-family: 'Agency FB' sans-serif;
	font-weight: bold;
	font-size: 28px;
	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
	background-image: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(24, 41, 82, 1) 35%, rgba(0, 212, 255, 1) 100%);
	color: transparent;
	background-clip: text;
	-webkit-background-clip: text;
}
.form-contents {
	width: 90%;
	min-height: 260px;
	margin: 0 auto;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: space-around;
}
.form-contents > div {
	width: 100%;
	display: flex;
	justify-content: flex-end;
}
.signup-contents {
	min-height: 290px;
	justify-content: space-between;
}
.input-box {
	width: 100px;
	margin-bottom: 5px;
}
.input-box > input:not(.remember-box) {
	width: 100%;
	outline: none;
	border: none;
	border-bottom: 1px solid #9a8d8d;
	transform: matrix(1, 0, 0, 1, 0, 0);
	padding-left: 30px;
	font-size: 15px;
}
.input-box > i {
	position: relative;
	left: 22px;
	z-index: 99;
	font-size: 20px;
}
.send-button {
	margin-top: 0;
}
.send-button button {
	width: 100%;
	height: 35px;
}
.input-box:nth-child(4) span {
	padding-left: 5px;
}
.bottom-text {
	align-items: center;
	justify-content: center !important;
}
.bottom-text a {
	color: #182952;
	font-size: 20px;
	padding-left: 5px;
}
.input-box > div {
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.input-box:nth-child(2),
.input-box:nth-child(4):not(.input-check) {
	justify-content: space-around;
}

/* media queries */
@media (max-width: 740px) {
	header .at-bottom {
		width: 100%;
		position: relative;
	}
	.toggle-menu {
		position: absolute;
		display: inline-block;
		top: 10;
		right: 5%;
	}
	nav {
		width: 100%;
	}
	nav ul {
		display: none;
		align-items: center;
	}
	nav ul.change {
		position: absolute;
		display: flex;
		flex-direction: column;
		top: 0;
		right: 0%;
		width: 100%;
		background: #0e172d;
		height: 90vh;
		padding: 1.25em;
		margin: 0;
		margin-top: 80px;
		z-index: 999;
	}

	nav ul li {
		flex-basis: 2em;
		font-size: 1.5em;
		color: #fff;
	}
	.overlay-contents-box {
		width: 100%;
		flex-direction: column;
		margin: 0 auto;
	}
	.overlay-box1 {
		align-self: center;
	}
	.overlay-box2 {
		display: flex;
		justify-content: flex-end;
		bottom: 0;
		right: 0;
	}
	.overlay-box3 {
		width: 100%;
		height: 300px;
		justify-content: center;
		align-items: flex-end;
	}
	.sections {
		width: 90%;
	}
	.project-thumb,
	.service-container,
	.blog-container {
		width: 100%;
	}
	.project-thumb img {
		width: 100%;
		margin: 0;
		box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.25);
	}
	.form-group-1,
	.form-group-2,
	.contact-container form input,
	.form-group-1 div,
	.form-group-3,
	.blog-buttons {
		width: 100%;
	}
	.form-group-1 {
		align-items: flex-start;
	}
	.form-group-2 {
		height: 200px;
	}
	.blog-buttons {
		justify-content: space-between;
	}
	.view-more button {
		width: 200px;
	}
	.login-container {
		width: 90%;
	}
	.form-contents > div {
		justify-content: flex-start;
	}
	.login-container > div:nth-child(1) {
		display: none;
	}
	.login-container > div:nth-child(2) {
		width: 100%;
	}
	.send-button button {
		width: 100%;
	}
	.overlay-contents div:nth-child(2) {
		width: 80%;
	}
}

